Fix gutter and other line breaks in print

--- a/sass/custom/_print.scss
+++ b/sass/custom/_print.scss
@@ -88,10 +88,14 @@
     }
 }
 
-div.terminal span.output {
+.line {
   word-break: break-word;
 }
 
 td {
   max-width: 630px;
+}
+
+.gutter {
+  vertical-align: text-top;
 }
